Changed colors and fixed bugs

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,24 @@
-/*body {
+body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #282c34;
+  color: #abb2bf;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-*/
+
+button {
+  background-color: #61afef;
+  color: #282c34;
+}
+
+input {
+  background-color: #abb2bf;
+}
